Actions
Bug #11396
closedndmpd: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
ndmp/ndmpd_log.c: In function 'ndmp_log_open_file': ndmp/ndmpd_log.c:212:33: error: comparison between pointer and integer [-Werror] if ((lpath == NULL) || (*lpath == NULL)) ^~ ndmp/ndmpd_callbacks.c: In function 'ndmpd_api_find_env': ndmp/ndmpd_callbacks.c:862:32: error: comparison between pointer and integer [-Werror] if (strcmp(name, envp->name) == NULL) ^~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 78d23b23ae6c0e2213934bf6698f8447eee94b2e
commit 78d23b23ae6c0e2213934bf6698f8447eee94b2e Author: Toomas Soome <tsoome@me.com> Date: 2019-07-22T16:22:32.000Z 11396 ndmpd: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions